--- a/experiments/cavity/README.ipynb
+++ b/experiments/cavity/README.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 1,
    "id": "244b1a74-3859-41e9-9381-8c8b69e72e35",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,8 @@
     "import scipy as sp\n",
     "from celluloid import Camera\n",
     "from IPython.display import HTML, Image\n",
+    "\n",
+    "import ofiz.plot as ofiz\n",
     "\n",
     "ROOT = Path(\"./assets/img/\")\n",
     "\n",
@@ -38,80 +40,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 208,
-   "id": "2800b165-716c-461e-bc2a-7170f0ba0429",
+   "cell_type": "markdown",
+   "id": "10dc0a70-bab4-404b-845d-e0b215710785",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def plot_heatmap(mesh, field, field_type=\"point\", resolution=(64, 64, 64), ax=None, sigma=0., cmap=\"inferno\"):\n",
-    "\n",
-    "    if ax is None:\n",
-    "        ax = plt.subplot()\n",
-    "\n",
-    "    ax.set_xticks([])\n",
-    "    ax.set_yticks([])\n",
-    "    \n",
-    "    resx, resy, resz = resolution\n",
-    "    \n",
-    "    points = mesh.points\n",
-    "\n",
-    "    if field_type == \"cell\":\n",
-    "        \n",
-    "        cells = mesh.cells[0].data\n",
-    "\n",
-    "        centroids = []\n",
-    "    \n",
-    "        for c in cells:\n",
-    "            cell_vertices = points[c]\n",
-    "    \n",
-    "            centroid = cell_vertices.mean(axis=0)\n",
-    "            centroids.append(centroid)\n",
-    "    \n",
-    "        points = np.array(centroids)\n",
-    "    \n",
-    "    def min_max(arr, index):\n",
-    "        return arr[:,index].min(), arr[:,index].max()\n",
-    "    \n",
-    "    xmin, xmax = min_max(points, 0)\n",
-    "    ymin, ymax = min_max(points, 1)\n",
-    "    zmin, zmax = min_max(points, 2)\n",
-    "\n",
-    "    img = np.zeros(resolution)\n",
-    "\n",
-    "    tree = sp.spatial.KDTree(points)\n",
-    "\n",
-    "    def get_cartesian(idx, res, cmin, cmax):\n",
-    "        return cmin+idx/(res-1)*(cmax-cmin) \n",
-    "\n",
-    "    indices = list(itertools.product(*list(map(lambda x: list(range(x)), resolution))))\n",
-    "    \n",
-    "    for i, j, k in indices:\n",
-    "\n",
-    "        x = get_cartesian(i, resx, cmin=xmin, cmax=xmax)\n",
-    "        y = get_cartesian(j, resy, cmin=ymin, cmax=ymax)\n",
-    "        z = get_cartesian(k, resz, cmin=zmin, cmax=zmax)\n",
-    "\n",
-    "        point = np.array([x, y, z])\n",
-    "        point_idx = tree.query(point, k=1)[1]\n",
-    "\n",
-    "        val = field[point_idx]\n",
-    "\n",
-    "        img[i,j,k] = val\n",
-    "\n",
-    "    img = img.mean(axis=2)\n",
-    "\n",
-    "    if sigma > 0:\n",
-    "        img = sp.ndimage.gaussian_filter(img, sigma=sigma)\n",
-    "    \n",
-    "    ax.imshow(img, cmap=cmap, origin=\"lower\")\n",
-    "\n",
-    "    return ax"
+    "# Pressure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 3,
    "id": "4888104b-9e2a-421f-8f2c-21058e4fb941",
    "metadata": {},
    "outputs": [
@@ -121,7 +59,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -137,55 +75,48 @@
     }
    ],
    "source": [
-    "plot_heatmap(mesh=mesh, field=mesh.point_data[\"p\"], resolution=(128, 128, 2), sigma=2.5)"
+    "ofiz.plot_heatmap(mesh=mesh, field=mesh.point_data[\"p\"], resolution=(128, 128, 2), sigma=2.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "640adf3c-1eb6-4e03-acca-d001a28e273e",
+   "execution_count": 4,
+   "id": "8d897858-2b4e-43f6-b180-4abab5dc40f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"assets/img/p_heatmap.gif\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def plot_quiver(mesh, field, field_type=\"point\", ax=None, cmap=\"bwr\"):\n",
+    "def plot_fn(mesh, ax):\n",
+    "    mesh = ofiz.MeshGraphics(mesh)\n",
+    "    mesh.plot_heatmap(field_name=\"p\", field_type=\"point\", resolution=(128, 128, 2), sigma=2.5, ax=ax)\n",
     "\n",
-    "    if ax is None:\n",
-    "        ax = plt.subplot()\n",
-    "\n",
-    "    ax.set_xticks([])\n",
-    "    ax.set_yticks([])\n",
-    "    \n",
-    "    points = mesh.points\n",
-    "\n",
-    "    if field_type == \"cell\":\n",
-    "        \n",
-    "        cells = mesh.cells[0].data\n",
-    "\n",
-    "        centroids = []\n",
-    "    \n",
-    "        for c in cells:\n",
-    "            cell_vertices = points[c]\n",
-    "    \n",
-    "            centroid = cell_vertices.mean(axis=0)\n",
-    "            centroids.append(centroid)\n",
-    "    \n",
-    "        points = np.array(centroids)\n",
-    "\n",
-    "    eps = 1e-7\n",
-    "    \n",
-    "    field = field[:,:2]\n",
-    "\n",
-    "    norm = np.linalg.norm(field, axis=1, keepdims=True)\n",
-    "    field = field/(norm+eps)\n",
-    "\n",
-    "    ax.quiver(points[:,0], points[:,1], field[:,0], field[:,1], np.squeeze(norm, axis=1), cmap=cmap)\n",
-    "\n",
-    "    return ax"
+    "ofiz.animate(\"./VTK\", plot_fn, gif_path=ROOT / \"p_heatmap.gif\", fps=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70e4c8e5-9a73-499d-b786-18aaf60f651c",
+   "metadata": {},
+   "source": [
+    "# Velocity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 5,
    "id": "8a168297-2883-4b18-b139-330951e05f50",
    "metadata": {},
    "outputs": [
@@ -195,7 +126,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -211,105 +142,12 @@
     }
    ],
    "source": [
-    "plot_quiver(mesh, field=mesh.point_data[\"U\"])"
+    "ofiz.plot_quiver(mesh, field=mesh.point_data[\"U\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "id": "6939fed5-fb7f-4641-b70f-fbb59ae0b47a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MeshGraphics:\n",
-    "\n",
-    "    def __init__(self, mesh):\n",
-    "        self.mesh: meshio.Mesh = mesh\n",
-    "\n",
-    "    def get_field(self, field_name, field_type):\n",
-    "        \n",
-    "        if field_type == \"point\":\n",
-    "            field = self.mesh.point_data[field_name]\n",
-    "        elif field_type == \"cell\":\n",
-    "            field = self.mesh.cell_data[field_name][0]\n",
-    "        return field\n",
-    "    \n",
-    "    def plot_heatmap(self, field_name, field_type, **kwargs):\n",
-    "        field = self.get_field(field_name, field_type=field_type)\n",
-    "        return plot_heatmap(self.mesh, field=field, field_type=field_type, **kwargs)\n",
-    "\n",
-    "    def plot_quiver(self, field_name, field_type, **kwargs):\n",
-    "        field = self.get_field(field_name, field_type=field_type)\n",
-    "        return plot_quiver(self.mesh, field=field, field_type=field_type, **kwargs)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
-   "id": "d4508d96-357f-4ded-9770-6844c44ff775",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def animate(vtk_root, plot_fn, gif_path, fps=30):\n",
-    "\n",
-    "    vtk_files = glob.glob(os.path.join(vtk_root, \"*.vtk\"))\n",
-    "\n",
-    "    def key(file):\n",
-    "        file = Path(file).stem\n",
-    "        return int(file.split(\"_\")[-1])\n",
-    "    \n",
-    "    vtk_files = sorted(vtk_files, key=key)\n",
-    "\n",
-    "    fig, ax = plt.subplots(1, 1)\n",
-    "\n",
-    "    camera = Camera(fig)\n",
-    "    \n",
-    "    for file in vtk_files:\n",
-    "\n",
-    "        mesh = meshio.read(file)\n",
-    "        plot_fn(mesh, ax)\n",
-    "        \n",
-    "        camera.snap()\n",
-    "\n",
-    "    anim = camera.animate()  \n",
-    "    anim.save(gif_path, writer=\"pillow\", fps=fps)\n",
-    "    plt.close()\n",
-    "    \n",
-    "    return Image(url=gif_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
-   "id": "8d897858-2b4e-43f6-b180-4abab5dc40f0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"assets/img/p_heatmap.gif\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 243,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def plot_fn(mesh, ax):\n",
-    "    mesh = MeshGraphics(mesh)\n",
-    "    mesh.plot_heatmap(field_name=\"p\", field_type=\"point\", resolution=(128, 128, 2), sigma=2.5, ax=ax)\n",
-    "\n",
-    "animate(\"./VTK\", plot_fn, gif_path=ROOT / \"p_heatmap.gif\", fps=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 6,
    "id": "d6352767-cb10-40e7-9310-193e3e7c8941",
    "metadata": {},
    "outputs": [
@@ -322,26 +160,18 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def plot_fn(mesh, ax):\n",
-    "    mesh = MeshGraphics(mesh)\n",
+    "    mesh = ofiz.MeshGraphics(mesh)\n",
     "    mesh.plot_quiver(field_name=\"U\", field_type=\"point\", ax=ax)\n",
     "\n",
-    "animate(\"./VTK\", plot_fn, gif_path=ROOT / \"u_quiver.gif\", fps=10)"
+    "ofiz.animate(\"./VTK\", plot_fn, gif_path=ROOT / \"u_quiver.gif\", fps=10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afe2ca55-3138-4a57-b686-6e377b25a1f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
