--- a/experiments/cavityDye/README.ipynb
+++ b/experiments/cavityDye/README.ipynb
@@ -32,7 +32,7 @@
    "id": "10dc0a70-bab4-404b-845d-e0b215710785",
    "metadata": {},
    "source": [
-    "# Pressure"
+    "# Dye"
    ]
   },
   {
@@ -62,14 +62,6 @@
     "\n",
     "ofiz.animate(\"./VTK\", plot_fn, gif_path=ROOT / \"c_heatmap.gif\", fps=10, start=2000)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a2724c6-99a3-4a22-89c2-0db46def0ec5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
